--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.6.2",
     "styled-components": "^5.3.10",
     "styled-reset": "^4.4.7",
     "typescript": "5.0.4"
